# self_improve_protein

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
configs/: v0.yaml
docs/: GETTING_STARTED.md  OPERATIONS.md
docs/research/: experiment-card-crossfit.md  experiment-card-exact-cv.md  experiment-card-locality.md  experiment-card-no-hessian.md  experiment-card-v0.md  feedback-ladder.md  protocol-audit.md  theory-audit.md
docs/results/: crossfit-decision.md  exact-cv-decision.md  locality-decision.md  overall-conclusion.md  v0-decision.md
docs/superpowers/plans/: 2026-06-29-proteingym-v0-implementation.md  2026-06-30-coworker-onboarding.md  2026-06-30-onboarding-docs-optimization.md
results/: branch-effects.csv  v0-method-means.csv
scripts/: verify_r1_r3.sh
slurm/: aggregate.sbatch  crossfit_aggregate.sbatch  crossfit_embed_pool_array.sbatch  crossfit_prepare_pool.sbatch  crossfit_replication_aggregate.sbatch  crossfit_replication_task_array.sbatch  crossfit_task_array.sbatch  embed_array.sbatch  exact_cv_aggregate.sbatch  exact_cv_task_array.sbatch  exact_cv_verify_array.sbatch  locality_aggregate.sbatch  locality_task_array.sbatch  prepare.sbatch  submit_crossfit_replication.sh  submit_crossfit_screen.sh  submit_exact_cv_screen.sh  submit_locality_screen.sh  submit_pipeline.sh  task_array.sbatch
src/self_improve_protein/: __init__.py  analysis.py  cli.py  config.py  crossfit.py  crossfit_cli.py  crossfit_data.py  crossfit_pool_cli.py  crossfit_replication.py  crossfit_replication_cli.py  data.py  embeddings.py  exact_cv.py  exact_cv_cli.py  experiment.py  locality.py  locality_cli.py  metrics.py  probes.py  provenance.py  ridge.py  selection.py
tests/: test_analysis.py  test_cli.py  test_config.py  test_crossfit.py  test_crossfit_cli.py  test_crossfit_data.py  test_crossfit_pool_cli.py  test_crossfit_replication.py  test_crossfit_replication_cli.py  test_data.py  test_embeddings.py  test_exact_cv.py  test_exact_cv_cli.py  test_experiment.py  test_locality.py  test_locality_cli.py  test_metrics.py  test_provenance.py  test_ridge.py  test_selection.py  test_slurm_contract.py  test_synthetic_probe.py
tests/fixtures/: dms_tiny.csv  scores_tiny.csv
(+3 files in other folders)
